2008-10-29  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda.conf.5.xml
	  man/xml-source/amanda-devices.7.xml: improve device property
	  documentation

2008-10-29  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: taperflush params can be
	  greater than 100%

2008-10-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/fileheader.c (dumpfile_free_data): New function.
	* common-src/fileheader.h (dumpfile_free_data): New prototype.
	* server-src/cmdline.c, server-src/dumper.c,
	  server-src/planner.c, server-src/amadmin.c,
	  server-src/amflush.c, server-src/holding.c,
	  server-src/driver.c, server-src/find.c,
	  server-src/taper-source.c, server-src/taper-file-source.c
	  server-src/taper.c: Call dumpfile_free or dumpfile_free_data.

2008-10-27  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/glib-util.c: check library version at runtime

2008-10-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Device.swg (start_file): Remove const for jobInfo.

2008-10-24  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Archive.pl: fix to also test for identity of
	  $user_data on perls that recognize such things

2008-10-24  Dustin J. Mitchell <dustin@zmanda.com>
	* amar-src/amar-test.c: don't ignore the return value of write()

2008-08-14  Nikolas Coukouma <atrus@zmanda.com>
            Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: fix mis-aligned memory accesses
	* amar-src/amar-test.c: fix test_pipe

2008-10-24  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm: New base module for script and application.
	* perl/Amanda/Script.pm: New base module for script.
	* perl/Amanda/Application.pm: New base module for application.
	* perl/Makefile.am: Add Amanda::Script_app, Amanda::Script And
				Amanda::Application.
	* application-src/generic-dumper.pl: Remove file.
	* application-src/generic-script.pl: Remove file.